Change notes from older releases. For current info see RELEASE-NOTES-1.20.

== MediaWiki 1.18 ==
=== Changes since 1.18.2 ===
* (bug 35446) Using "{{nse:}}" with an invalid namespace name no longer throws
  a PHP warning.

== MediaWiki 1.18.2 ==
2012-03-21

This is a maintenance and security release of the MediaWiki 1.18 branch.

=== Changes since 1.18.1 ===
* (bug 33686) could not get a list of contributor for an article when using
 a SQLite database.
* (Bug 33865) Exception thrown in action=parse when attempting to use the title
  parameter without setting the text parameter.
* UserMailer could potentially throw a fatal error when a MailAddress object had
  an empty email address.
* (Bug 33087) Exchange server rejected mail sent by MediaWiki
* (bug 34528) Edit section tooltips show correction section name again
* (bug 34246) MediaWiki:Whatlinkshere-summary message is displayed again in
  Special:Whatlinkshere
* (bug 22555) Remove or skip strip markers from tag hooks like &lt;nowiki&gt; in
  core parser functions which operate on strings, such as formatnum.
* (bug 34212) ApiBlock/ApiUnblock allow action to take place without a token
  parameter present.
* (bug 34907) Fixed exposure of tokens through load.php that could have facilitated
  CSRF attacks.
* (bug 35317) CSRF in Special:Upload.

== MediaWiki 1.18.1 ==
2012-01-11

This a maintenance and security release of the MediaWiki 1.18 branch.

=== Changes since 1.18.0 ===
* (bug 32712) Fix for search indexing of pages with certain unicode chars following URL.
* (bug 3901) Lang, hreflang attribs added to sidebar interlanguage links for screen readers.
* (bug 30774) mediawiki.html: Add support for numbers and booleans in the
  attribute values and element contents.
* (bug 32473) [[Special:PasswordReset]] can not be used on private wiki.
* (bug 32853) Fixed CACHE_DBA object cache type.
* (bug 32786) Backward compatibility for extension using 1.17's Database::newFromType().